# sf-data-pipelines-quant

./: .gitignore  README.md  pyproject.toml  test.py
pipelines/: __main__.py  all_pipelines.py  all_signals_flow.py  assets_flow.py  barra_asset_ids_flow.py  barra_assets_flow.py  barra_ids_flow.py  barra_returns_flow.py  barra_risk_flow.py  barra_specific_returns.py  barra_volume_flow.py  compustat_cik_flow.py  fama_french_flow.py  ftse_russell_flow.py  signal_output_utils.py  signals.py  signals_flow.py  ten_k_filings_flow.py  ten_k_signals_flow.py
pipelines/utils/: __init__.py  tables.py  ten_k_utils.py
scripts/: test.py
