[project]
name = "sf-data-pipelines-quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.65",
    "click>=8.3.0",
    "exchange-calendars>=4.11.2",
    "numpy>=2.3.4",
    "polars>=1.38.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "tqdm>=4.67.1",
    "wrds>=3.4.0",
]
